--- a/css/style.css
+++ b/css/style.css
@@ -240,9 +240,10 @@ nav ul li a {
 /*-----------------------------------------------------------------------------------*/
 
 #header {
-  background: url("../images/home.JPG") repeat scroll center center / cover;
   height: 100vh;
   width: 100%;
+  background: url("../images/home.JPG") no-repeat scroll center center / cover;
+  background-size: 100vw 100vh;
 }
 
 
