--- a/css/style.css
+++ b/css/style.css
@@ -244,17 +244,19 @@ nav ul li a {
 /*-----------------------------------------------------------------------------------*/
 
 #header {
-  height: 100vh;
+  height: 100%;
   width: 100%;
-  background: url("../images/home.JPG") no-repeat scroll center center / cover;
-  background-size: 100vw 100vh;
+  background-color: #000;
 }
 
+.float-right{
+  float: right;
+  object-fit: cover;
+}
 
 #header .header-content {
   height: 100vh;
   text-align: left;
-  width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -321,7 +323,7 @@ nav ul li a {
   margin-top: -60px;
   margin-left: 40px;
   height: 400px;
-  object-fit: cover;
+  object-fit: fill;
 }
 
 #about .about-descr .p-heading {
